--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -14,131 +14,130 @@
                     <ul class="menu-list">
 
                         <li>
-                            <img src="/Menu-Images/2018-08/web_Brown Sugar Balsamic Pork.JPG" alt="Brown Sugar Balsamic Pork" class="menu-image" />
+                            <img src="/Menu-Images/2018-09/web_Chicken Teriyaki.JPG" alt="Chicken Teriyaki" class="menu-image" />
                             <div>
-                                <h4>Brown Sugar Balsamic Pork</h4>
-                                <p>Herb rubbed pork slow cooked all day and topped with a flavorful balsamic glaze. Comes with
-                                    veggies. (Slow Cooker)</p>
+                                <h4>Chicken Teriyaki</h4>
+                                <p>Chicken cooked in a homemade teriyaki sauce.  Comes with stir fry veggies and rice. (Stovetop)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-08/web_Pesto Parmesan Pork Chops.JPG" alt="Pesto Parmesan Pork Chops" class="menu-image" />
+                            <img src="/Menu-Images/2018-09/web_Balsamic Chicken and Veggies.JPG" alt="Balsamic Chicken and Veggies" class="menu-image" />
                             <div>
-                                <h4>Pesto Parmesan Pork Chops</h4>
-                                <p>Juicy pork chops smothered in pesto and topped with parmesan. Bake until melty and delicious!
-                                    Comes with veggies (Baked or Grilled)</p>
+                                <h4>Balsamic Chicken and Veggies</h4>
+                                <p>Chicken with green beans, carrots and tomatoes tossed with a delicious balsamic sauce. (Stovetop)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-08/web_Pork Corn Zucchini Enchiladas.JPG" alt="Pork, Corn, and Zucchini Enchiladas" class="menu-image" />
+                            <img src="/Menu-Images/2018-09/web_Squash and Quinoa Soup.JPG" alt="Squash and Quinoa Soup" class="menu-image" />
                             <div>
-                                <h4>Pork, Corn, and Zucchini Enchiladas</h4>
-                                <p>Pork and veggies slow cooked to create a delicious enchilada filling. Then fill tortillas
-                                    and smother them with cheese. It is a great dinner using lots of seasonal veggies. (Slow
-                                    cooker then baked)</p>
+                                <h4>Squash and Quinoa Soup</h4>
+                                <p>Chicken, butternut squash, and quinoa cook into the perfect soup autumn soup. (Slow cooker)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-08/web_Cajun Burgers.JPG" alt="Cajun Burgers" class="menu-image" />
+                            <img src="/Menu-Images/2018-09/web_Cilantro Lime Chicken.JPG" alt="Cilantro Lime Chicken" class="menu-image" />
                             <div>
-                                <h4>Cajun Burgers</h4>
-                                <p>Beef mixed with the Holy Trinity of Cajun cooking (onion, celery, green pepper, garlic) and
-                                    Cajun seasoning. Topped with pepper jack and served on an onion bun. (Grilled)</p>
+                                <h4>Cilantro Lime Chicken</h4>
+                                <p>Pan fried chicken finished with a creamy cilantro lime sauce. Comes with veggies. (Stovetop)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-08/web_Flank Steak and Peaches.JPG" alt="Flank Steak and Peaches" class="menu-image" />
+                            <img src="/Menu-Images/2018-09/web_Hot Ham and Swiss Croissants.JPG" alt="Hot Ham and Swiss Croissants" class="menu-image" />
                             <div>
-                                <h4>Flank Steak and Peaches</h4>
-                                <p>Marinated flank steaks served with grilled peaches. One of the best ways to taste the flavors
-                                    of the season! (Grilled) </p>
+                                <h4>Hot Ham and Swiss Croissants</h4>
+                                <p>Flakey croissants layered with homemade honey mustard, Swiss and ham. A delicious dinner ready in minutes!  Comes with veggies. (Oven) </p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-08/web_Salsa Verde Chicken Tacos.JPG" alt="Salsa Verde Chicken Tacos" class="menu-image" />
+                            <img src="/Menu-Images/2018-09/web_Green Chile and Cheese Stuffed Pork Chops.JPG" alt="Green Chile and Cheese Stuffed Pork Chops" class="menu-image" />
                             <div>
-                                <h4>Salsa Verde Chicken Tacos</h4>
-                                <p>Slow cooked chicken with salsa verde. Served in corn tortillas. Soon to become a Taco Tuesday
-                                    favorite! (Slow cooker) </p>
+                                <h4>Green Chile and Cheese Stuffed Pork Chops</h4>
+                                <p>Thick, juicy pork chops stuffed with green chiles and cheddar.  Comes with veggies. (Oven)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-08/web_Roasted Chicken and Veggies.JPG" alt="Roasted Chicken and Veggies" class="menu-image" />
+                            <img src="/Menu-Images/2018-09/web_Italian Stuffed Zucchini.JPG" alt="Italian Stuffed Zucchini" class="menu-image" />
                             <div>
-                                <h4>Roasted Chicken and Veggies</h4>
-                                <p>A one pan wonder! Juicy chicken roasted with a bounty of seasonal veggies! (Grill or oven)</p>
+                                <h4>Italian Stuffed Zucchini</h4>
+                                <p>Zucchini boats filled with flavorful meat sauce. Topped with mozzarella and baked until golden brown and delicious. (Stovetop then oven)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-08/web_Turkey Apple Cheddar Burgers.JPG" alt="Turkey Apple Cheddar Burgers" class="menu-image" />
+                            <img src="/Menu-Images/2018-09/web_Barbacoa Beef.JPG" alt="Barbacoa Beef" class="menu-image" />
                             <div>
-                                <h4>Turkey Apple Cheddar Burgers</h4>
-                                <p>Turkey is mixed with shredded apples and cheddar for a juicy burger! Comes with buns and
-                                    veggies. (Grill)</p>
+                                <h4>Barbacoa Beef</h4>
+                                <p>Flavorful beef perfect for tacos, nachos or quesadillas! Comes with tortillas and cheese. (Slow cooker)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-08/web_Sausage and Cheese Bubbles.JPG" alt="Sausage and Cheese Bubbles" class="menu-image" />
+                            <img src="/Menu-Images/2018-09/web_Beef Tips and Roasted Veggies.JPG" alt="Beef Tips and Roasted Veggies" class="menu-image" />
                             <div>
-                                <h4>Sausage and Cheese Bubbles</h4>
-                                <p>A great meal for a lazy morning or a rushed evening! Biscuits filled with sausage and cheese.
-                                    Comes with scrambled eggs. (Oven and Stovetop)</p>
+                                <h4>Beef Tips and Roasted Veggies</h4>
+                                <p>Juice, herby pieces of beef served with roasted veggies. A fall favorite! (Oven)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-08/web_Veggie Pasta.JPG" alt="Veggie Pasta" class="menu-image" />
+                            <img src="/Menu-Images/2018-09/web_Tortellini Arrabbiata.JPG" alt="Tortellini Arrabbiata" class="menu-image" />
                             <div>
-                                <h4>Veggie Pasta</h4>
-                                <p>A one pot pasta dish filled with seasonal veggies! (Stovetop)</p>
+                                <h4>Tortellini Arrabbiata</h4>
+                                <p>Veggie filled sauce served over cheese tortellini.  Perfect for Meatless Monday! (Stovetop)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-08/web_Three Sisters Enchilada Bowls.JPG" alt="Three Sisters Enchilada Bowls" class="menu-image" />
+                            <img src="/Menu-Images/2018-09/web_Squash and Quinoa Soup.JPG" alt="Vegan Squash and Quinoa Soup" class="menu-image" />
                             <div>
-                                <h4>Three Sisters Enchilada Bowls</h4>
-                                <p>Squash, beans and corn fill this amazing enchilada bowl! (Stovetop)</p>
+                                <h4>Vegan Squash and Quinoa Soup</h4>
+                                <p>Butternut squash and quinoa cook into the perfect soup autumn soup. (Slow cooker)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-08/web_Chickpea and Quinoa Bowls.JPG" alt="Chickpea and Quinoa Bowls" class="menu-image" />
+                            <img src="/Menu-Images/2018-09/web_Calabacita Tacos.JPG" alt="Calabacita Tacos" class="menu-image" />
                             <div>
-                                <h4>Chickpea and Quinoa Bowls</h4>
-                                <p>Creamy tomato-y chickpeas top quinoa for a quick and delicious dinner. (Stovetop)</p>
+                                <h4>Calabacita Tacos</h4>
+                                <p>Zucchini, corn, and green chiles meld together into a delicious taco filling. Comes with corn tortillas. (Stovetop)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-08/web_Roasted Chickpea Gyros.JPG" alt="Roasted Chickpea Gyros" class="menu-image" />
+                            <img src="/Menu-Images/2018-09/web_Roasted Veggies with Orzo.JPG" alt="Roasted Veggies with Orzo" class="menu-image" />
                             <div>
-                                <h4>Roasted Chickpea Gyros</h4>
-                                <p>Roast chickpeas make a great meat free filling for these quick gyros. (Oven)</p>
+                                <h4>Roasted Veggies with Orzo</h4>
+                                <p>A great early fall pasta salad. Eggplant, zucchini, tomatoes and more are roasted then mixed with orzo and a light vinaigrette. (Oven and stovetop)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-08/web_Sweet Potato and Black Bean Tacos.JPG" alt="Sweet Potato and Black Bean Tacos" class="menu-image" />
+                            <img src="/Menu-Images/2018-09/web_Three Tomato Risotto.JPG" alt="Three Tomato Risotto" class="menu-image" />
                             <div>
-                                <h4>Sweet Potato and Black Bean Tacos</h4>
-                                <p>A great meat free taco filling! (Stovetop)</p>
+                                <h4>Three Tomato Risotto</h4>
+                                <p>Three kinds of tomatoes are mixed into creamy Arborio rice. (Stovetop)</p>
                             </div>
                         </li>
 
                         <li>
-                            <img src="/Menu-Images/2018-08/web_Spicy Thai Noodles.JPG" alt="Spicy Thai Noodles" class="menu-image" />
+                            <!--<img src="/Menu-Images/2018-09/web_Vegan Italian Stuffed Zucchini.JPG" alt="Vegan Italian Stuffed Zucchini" class="menu-image" /> -->
                             <div>
-                                <h4>Spicy Thai Noodles</h4>
-                                <p>Veggie filled rice noodles are tossed with a spicy sauce. (Stovetop)</p>
+                                <h4>Vegan Italian Stuffed Zucchini</h4>
+                                <p>Mushrooms, carrots, and onions are caramelized then mixed with homemade marinara before being stuffed into zucchini boats. (Stovetop then oven)</p>
+                            </div>
+                        </li>
+
+                        <li>
+                            <!-- <img src="/Menu-Images/2018-09/web_Vegetable Satay Kebobs.JPG" alt="Vegetable Satay Kebobs" class="menu-image" /> -->
+                            <div>
+                                <h4>Vegetable Satay Kebobs</h4>
+                                <p>Veggies receive a quick marinade before being threaded onto skewers and grilled. Comes with couscous. (Grill or stovetop)</p>
                             </div>
                         </li>
 
