--- a/themes/dinnerdelights/source/css/style.css
+++ b/themes/dinnerdelights/source/css/style.css
@@ -39,7 +39,6 @@ Light Mushroom - #efeeeb - rgb 239, 238, 236
 
 body {
   font-family: "Open Sans", sans-serif;
-  font-smooth: always;
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: antialiased;
   position: relative;
@@ -814,6 +813,11 @@ textarea:focus {
 
   .menu-list li {
     flex-direction: row;
+    justify-content: flex-start;
+  }
+
+  .menu-list li div {
+    flex: 1 1 auto;
   }
 
   .menu-image {
@@ -822,6 +826,7 @@ textarea:focus {
 
   .menu-list li:nth-child(2n) {
     flex-direction: row-reverse;
+    justify-content: flex-end;
   }
   
   .menu-list li:nth-child(2n) .menu-image,
