--- a/themes/dinnerdelights/layout/_partial/head.ejs
+++ b/themes/dinnerdelights/layout/_partial/head.ejs
@@ -1,7 +1,7 @@
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="Dinner Delights offers personal chef services to meet any budget or needs. Meal selections are fully-customized to your taste and dietary needs.">
-    <meta name="keywords" content="food,dinner,meals,personal chef,chef,supper">
+    <meta name="description" content="Dinner Delights offers personal chef services in central Iowa to meet any budget or needs. Meal selections are fully-customized to your taste and dietary needs.">
+    <meta name="keywords" content="food,dinner,meals,personal chef,chef,supper,des moines,iowa">
     <meta author="Dinner Delights, LLC">
     
     <%
@@ -55,5 +55,6 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <%- partial('structured-data') %>
     <%- partial('google-analytics') %>
   </head>
