Added images for November 2018 and removed October 2018

--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -13,130 +13,11 @@
                     <div id="menu-carousel" class="carousel slide">
                         <!-- Indicators -->
                         <ol class="carousel-indicators">
-                            <li data-target="#menu-carousel" data-slide-to="0"></li>
-                            <li data-target="#menu-carousel" data-slide-to="1" class="active"></li>
+                            <li data-target="#menu-carousel" data-slide-to="0" class="active"></li>
                         </ol>
 
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner" role="listbox">
-                            <div class="item">
-                                <h3 class="subheading">October 2018</h3>
-                                <ul class="menu-list">
-
-                                    <li>
-                                        <img src="/Menu-Images/2018-10/web_BBQ Bacon Onion Bombs.JPG" alt="BBQ Bacon Onion Bombs" class="menu-image" />
-                                        <div>
-                                            <h4>BBQ Bacon Onion Bombs</h4>
-                                            <p>Homemade meatballs wrapped in onion wrapped in bacon. Soon to be your fall favorite! Comes with veggies. (Oven)</p>
-                                        </div>
-                                    </li>
-
-                                    <li>
-                                        <img src="/Menu-Images/2018-10/web_Three Bean Chili.JPG" alt="Three Bean Chili with Sausage" class="menu-image" />
-                                        <div>
-                                            <h4>Three Bean Chili with Sausage</h4>
-                                            <p>A hearty chili that is ready when you get home. (Slow cooker)</p>
-                                        </div>
-                                    </li>
-
-                                    <li>
-                                        <img src="/Menu-Images/2018-10/web_Red Wine Roast with Creamy Polenta and Roasted Radishes.JPG" alt="Red Wine Roast with Creamy Polenta and Roasted Radishes" class="menu-image" />
-                                        <div>
-                                            <h4>Red Wine Roast with Creamy Polenta and Roasted Radishes</h4>
-                                            <p>Herb rubbed roast cooked in red wine. Perfect for Sunday dinner and no one has to know it took you less than half an hour to make! (Slow cooker)</p>
-                                        </div>
-                                    </li>
-
-                                    <li>
-                                        <img src="/Menu-Images/2018-10/web_Italian Breakfast Bake.JPG" alt="Italian Breakfast Bake" class="menu-image" />
-                                        <div>
-                                            <h4>Italian Breakfast Bake</h4>
-                                            <p>Layers of hash browns, ham, salami, veggies, mozzarella and eggs are baked into a delicious casserole. It is a great dish for a chilly autumn morning or evening! (Oven)</p>
-                                        </div>
-                                    </li>
-
-                                    <li>
-                                        <img src="/Menu-Images/2018-10/web_Honey Lime Chicken with Butternut Squash.JPG" alt="Honey Lime Chicken with Butternut Squash" class="menu-image" />
-                                        <div>
-                                            <h4>Honey Lime Chicken with Butternut Squash</h4>
-                                            <p>The perfect blend of squash, chicken and seasonings. Served over rice. (Slow cooker)</p>
-                                        </div>
-                                    </li>
-
-                                    <li>
-                                        <img src="/Menu-Images/2018-10/web_Apple Cider Pulled Chicken.JPG" alt="Apple Cider Pulled Chicken" class="menu-image" />
-                                        <div>
-                                            <h4>Apple Cider Pulled Chicken</h4>
-                                            <p>Juicy shredded chicken that makes a great sandwich. Comes with sourdough, cheddar, and veggies. (Slow cooker)</p>
-                                        </div>
-                                    </li>
-
-                                    <li>
-                                        <img src="/Menu-Images/2018-10/web_Spicy Pork Burrito Bowls.JPG" alt="Spicy Pork Burrito Bowls" class="menu-image" />
-                                        <div>
-                                            <h4>Spicy Pork Burrito Bowls</h4>
-                                            <p>Pork and veggies seasoned to your taste. Add some rice and you have the perfect burrito bowl!  Comes with rice and cheese. (Slow cooker)</p>
-                                        </div>
-                                    </li>
-
-                                    <li>
-                                        <img src="/Menu-Images/2018-10/web_Cuban Sandwiches.JPG" alt="Cuban Sandwiches" class="menu-image" />
-                                        <div>
-                                            <h4>Cuban Sandwiches</h4>
-                                            <p>Back by popular demand! Pork is slow cooked with citrus and herbs all day. Add ham and Swiss and you have an amazing sandwich. (Slow cooker)</p>
-                                        </div>
-                                    </li>
-
-                                    <li>
-                                        <img src="/Menu-Images/2018-10/web_Penne alla Vodka.JPG" alt="Penne alla Vodka" class="menu-image" />
-                                        <div>
-                                            <h4>Penne alla Vodka</h4>
-                                            <p>A creamy tomato sauce is mixed with penne for one of my favorite pasta dishes. (Stovetop)</p>
-                                        </div>
-                                    </li>
-
-                                    <li>
-                                        <img src="/Menu-Images/2018-10/web_Creamy Pumpkin Soup.JPG" alt="Creamy Pumpkin Soup" class="menu-image" />
-                                        <div>
-                                            <h4>Creamy Pumpkin Soup</h4>
-                                            <p>One of my favorite soups! It is the perfect flavor of fall. (Stovetop)</p>
-                                        </div>
-                                    </li>
-
-                                    <li>
-                                        <img src="/Menu-Images/2018-10/web_Three Bean Chili.JPG" alt="Three Bean Chili" class="menu-image" />
-                                        <div>
-                                            <h4>Three Bean Chili</h4>
-                                            <p>A hearty chili that is ready when you get home. (Slow cooker)</p>
-                                        </div>
-                                    </li>
-
-                                    <li>
-                                        <img src="/Menu-Images/2018-10/web_BBQ Tacos.JPG" alt="BBQ Tacos" class="menu-image" />
-                                        <div>
-                                            <h4>BBQ Tacos</h4>
-                                            <p>A twist on the usual Mexican flavors. Veggies are mixed with a quick BBQ sauce and stuffed into corn tortillas. (Stovetop)</p>
-                                        </div>
-                                    </li>
-
-                                    <li>
-                                        <img src="/Menu-Images/2018-10/web_Chickpea and Eggplant Curry.JPG" alt="Chickpea and Eggplant Curry" class="menu-image" />
-                                        <div>
-                                            <h4>Chickpea and Eggplant Curry</h4>
-                                            <p>This delicious curry comes together in no time. Comes with rice. (Stovetop)</p>
-                                        </div>
-                                    </li>
-
-                                    <li>
-                                        <img src="/Menu-Images/2018-10/web_Peanut and Veggie Noodles.JPG" alt="Peanut and Veggie Noodles" class="menu-image" />
-                                        <div>
-                                            <h4>Peanut and Veggie Noodles</h4>
-                                            <p>Soba noodles and stir fry veggies are tossed with a creamy peanut butter sauce. (Stovetop)</p>
-                                        </div>
-                                    </li>
-
-                                </ul>
-                            </div>
                             <div class="item active">
                                 <h3 class="subheading">November 2018</h3>
                                 <ul class="menu-list">
@@ -259,8 +140,8 @@
                                     </li>
 
                                     <li>
-                                        <!-- <img src="/Menu-Images/2018-11/web_Harissa Veggie Bowl.JPG" alt="Harissa Veggie Bowl"
-                                            class="menu-image" /> -->
+                                        <img src="/Menu-Images/2018-11/web_Harissa Veggie Bowl.JPG" alt="Harissa Veggie Bowl"
+                                            class="menu-image" />
                                         <div>
                                             <h4>Harissa Veggie Bowl</h4>
                                             <p>A great selection of fall veggies, roasted and served over quinoa. (Oven)</p>
@@ -268,8 +149,8 @@
                                     </li>
 
                                     <li>
-                                        <!-- <img src="/Menu-Images/2018-11/web_Roasted Veggie Tacos.JPG" alt="Roasted Veggie Tacos"
-                                            class="menu-image" /> -->
+                                        <img src="/Menu-Images/2018-11/web_Roasted Veggie Tacos.JPG" alt="Roasted Veggie Tacos"
+                                            class="menu-image" />
                                         <div>
                                             <h4>Roasted Veggie Tacos</h4>
                                             <p>The best tacos filled with veggies and flavor! (Oven)</p>
