December 2018 Menu and menu carousel fixes

--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -10,15 +10,10 @@
             </div>
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
-                    <div id="menu-carousel" class="carousel slide">
-                        <!-- Indicators -->
-                        <ol class="carousel-indicators">
-                            <li data-target="#menu-carousel" data-slide-to="0" class="active"></li>
-                        </ol>
-
+                    <div id="menu-carousel" class="flexslider">
                         <!-- Wrapper for slides -->
-                        <div class="carousel-inner" role="listbox">
-                            <div class="item active">
+                        <ul class="slides">
+                            <li>
                                 <h3 class="subheading">November 2018</h3>
                                 <ul class="menu-list">
 
@@ -158,18 +153,140 @@
                                     </li>
                                 </ul>
 
-                            </div>                            
-                        </div>
+                            </li>
+                            <li>
+                                <h3 class="subheading">December 2018</h3>
+                                <ul class="menu-list">
 
-                        <!-- Controls -->
-                        <a class="left carousel-control" href="#menu-carousel" role="button">
-                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="right carousel-control" href="#menu-carousel" role="button">
-                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
+                                    <li>
+                                        <img src="/Menu-Images/2018-12/web_Baked French Toast with Praline Topping.JPG" alt="Baked French Toast with Praline Topping"
+                                            class="menu-image" />
+                                        <div>
+                                            <h4>Baked French Toast with Praline Topping</h4>
+                                            <p>My favorite family tradition. We have this amazing breakfast bake for all our big family breakfasts. (Oven)</p>
+                                        </div>
+                                    </li> 
+
+                                    <li>
+                                        <img src="/Menu-Images/2018-12/web_Orange Rosemary Chicken.JPG" alt="Orange Rosemary Chicken"
+                                            class="menu-image" />
+                                        <div>
+                                            <h4>Orange Rosemary Chicken</h4>
+                                            <p>Juicy, citrus marinated chicken served with veggies. (Stovetop)</p>
+                                        </div>
+                                    </li>
+
+                                    <li>
+                                        <img src="/Menu-Images/2018-12/web_Honey Sriracha Chicken.JPG" alt="Honey Sriracha Chicken"
+                                            class="menu-image" />
+                                        <div>
+                                            <h4>Honey Sriracha Chicken</h4>
+                                            <p>A little spice to go with a little sweet! This will be your new favorite take-out substitute. Comes with rice and veggies. (Stovetop)</p>
+                                        </div>
+                                    </li>
+
+                                    <li>
+                                        <img src="/Menu-Images/2018-12/web_French Onion Chicken.JPG" alt="French Onion Chicken"
+                                            class="menu-image" />
+                                        <div>
+                                            <h4>French Onion Chicken</h4>
+                                            <p>Tender chunks of chicken, caramelized onions, and Swiss cheese served over egg noodles. (Stovetop)</p>
+                                        </div>
+                                    </li>
+
+                                    <li>
+                                        <img src="/Menu-Images/2018-12/web_Parmesan Honey Pork Roast.JPG" alt="Parmesan Honey Pork Roast"
+                                            class="menu-image" />
+                                        <div>
+                                            <h4>Parmesan Honey Pork Roast</h4>
+                                            <p>Italian herbs and cheese slow cooked until the roast falls apart. Comes with veggies. (Slow cooker)</p>
+                                        </div>
+                                    </li>
+
+                                    <li>
+                                        <img src="/Menu-Images/2018-12/web_Spicy Apple Glazed Meatballs.JPG" alt="Spicy Apple Glazed Meatballs"
+                                            class="menu-image" />
+                                        <div>
+                                            <h4>Spicy Apple Glazed Meatballs</h4>
+                                            <p>A sticky, sweet glaze to top meatballs. Comes with rice and veggies. (Slow cooker)</p>
+                                        </div>
+                                    </li>
+
+                                    <li>
+                                        <img src="/Menu-Images/2018-12/web_Ropa Vieja.JPG" alt="Ropa Vieja"
+                                            class="menu-image" />
+                                        <div>
+                                            <h4>Ropa Vieja</h4>
+                                            <p>Beef roast slow cooked with peppers and tomatoes. A Midwest twist on a Cuban favorite. Comes with rice. (Slow Cooker)</p>
+                                        </div>
+                                    </li>
+
+                                    <li>
+                                        <img src="/Menu-Images/2018-12/web_Stuffed Pepper Soup.JPG" alt="Stuffed Pepper Soup"
+                                            class="menu-image" />
+                                        <div>
+                                            <h4>Stuffed Pepper Soup</h4>
+                                            <p>A tomato based soup filled with beef or mushrooms, peppers, and rice. A quick and delicious dinner. (Stovetop)</p>
+                                        </div>
+                                    </li>
+
+                                    <li>
+                                        <img src="/Menu-Images/2018-12/web_Taco Soup.JPG" alt="Taco Soup"
+                                            class="menu-image" />
+                                        <div>
+                                            <h4>Taco Soup</h4>
+                                            <p>A flavorful, veggie loaded soup. It is my go-to for a filling meal in cold weather. Comes with or without chicken and cheese. (Slow cooker)</p>
+                                        </div>
+                                    </li>
+
+                                    <li>
+                                        <img src="/Menu-Images/2018-12/web_Butter(less) Chickpeas.JPG" alt="Butter(less) Chickpeas"
+                                            class="menu-image" />
+                                        <div>
+                                            <h4>Butter(less) Chickpeas</h4>
+                                            <p>A vegan take on a classic Indian dish. Comes with rice. (Stovetop)</p>
+                                        </div>
+                                    </li>
+
+                                    <li>
+                                        <img src="/Menu-Images/2018-12/web_Breakfast Skillet.JPG" alt="Breakfast Skillet"
+                                            class="menu-image" />
+                                        <div>
+                                            <h4>Breakfast Skillet</h4>
+                                            <p>A veggie filled hash. Perfect for a quick breakfast or dinner. (Stovetop)</p>
+                                        </div>
+                                    </li>
+
+                                    <li>
+                                        <img src="/Menu-Images/2018-12/web_Smoky Sweet Potato and Chickpea Stew.JPG" alt="Smoky Sweet Potato and Chickpea Stew"
+                                            class="menu-image" />
+                                        <div>
+                                            <h4>Smoky Sweet Potato and Chickpea Stew</h4>
+                                            <p>A thick and delicious stew. A great meal to go with a good book. (Slow Cooker)</p>
+                                        </div>
+                                    </li>
+
+                                    <li>
+                                        <!-- <img src="/Menu-Images/2018-12/web_Couscous Casserole.JPG" alt="Couscous Casserole"
+                                            class="menu-image" /> -->
+                                        <div>
+                                            <h4>Couscous Casserole</h4>
+                                            <p>layers of roasted veggies and couscous, baked until bubbly and delicious. (Oven)</p>
+                                        </div>
+                                    </li>
+
+                                    <li>
+                                        <!-- <img src="/Menu-Images/2018-12/web_Honey Lime Ginger Pork.JPG" alt="Honey Lime Ginger Pork"
+                                            class="menu-image" /> -->
+                                        <div>
+                                            <h4>Honey Lime Ginger Pork</h4>
+                                            <p>Sweet and tangy pork served with veggies and rice. (Slow Cooker)</p>
+                                        </div>
+                                    </li>
+                                                                        
+                                </ul>
+                            </li>                          
+                        </div>
                     </div>
                 </div>
             </div>
